# PNS4OneS

./: .gitignore  README.md
PNS4OneS/: PNS4OneS.sln
PNS4OneS/PNS4OneS/: AdminAccount.cs  AppConfiguration.cs  AppConfigurationException.cs  AuthHandler.cs  ClientConnection.cs  IMessageSender.cs  IPEndPointExtensions.cs  IncomingMessage.cs  InternalServerErrorResult.cs  Message.cs  MessageRecipient.cs  Notification.cs  NotificationServer.cs  NotificationsListeningConfiguration.cs  PNS4OneS.csproj  Program.cs  SendMessageHandler.cs  ServiceConfiguration.cs  StartupAdmin.cs  StartupService.cs
PNS4OneS/PNS4OneS.KeyStorage/: AccessToken.cs  ClientApplication.cs  ClientAppsFileStorage.cs  ClientAppsManager.cs  IClientAppsStorage.cs  PNS4OneS.KeyStorage.csproj  Utils.cs
PNS4OneS/PNS4OneSAdmin/: PNS4OneSAdmin.csproj  Program.cs
PNS4OneSClient/: ConfigDumpInfo.xml  Configuration.xml
PNS4OneSClient/Catalogs/: Пользователи.xml  УчетныеЗаписиЭлектроннойПочты.xml
PNS4OneSClient/CommonModules/: pns4ones_СервисУведомлений.xml  pns4ones_СервисУведомленийВызовСервера.xml  pns4ones_СервисУведомленийКлиент.xml  pns4ones_СервисУведомленийКлиентПовтИсп.xml  pns4ones_СервисУведомленийКлиентСервер.xml  pns4ones_СервисУведомленийПереопределяемый.xml  УправлениеЭлектроннойПочтой.xml
PNS4OneSClient/CommonPictures/: ДлительнаяОперация16.xml  (+3 more)
PNS4OneSComp/: AddInNative.cpp  AddInNative.h  CMakeLists.txt  ConversionWchar.cpp  ConversionWchar.h  ServiceConnector.cpp  ServiceConnector.h  base64.cpp  base64.h  crypt.cpp  crypt.h  dllmain.cpp  pns4onescomp.def  pns4onescomp.rc  resource.h
(+69 files in other folders)
